[&1.6] Issue 3322:  	 All FireBug windows show text overlapped
 Every use of 
 Monaco,
 is deleted, except on mac

Based on reading I believe that Monaco should be mac only.  
http://www.w3schools.com/CSS/pr_font_font-family.asp  
http://en.wikipedia.org/wiki/Monaco_%28typeface%29
http://www.angelfire.com/al4/rcollins/style/fonts.html


http://code.google.com/p/fbug/source/detail?r=7689

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -26,7 +26,7 @@ window[chromehidden~="toolbar"] #fbToolbar {
 
 .fbCommandLineCompletions {
     cursor: default;
-    font-family: Monaco, monospace;
+    font-family: monospace;
     /* overflow: auto; XXXjjb I can't get the CSS to work
     max-height: 270px; */
 }
@@ -282,7 +282,7 @@ panelTab[selected="true"]:hover > panelTabMenu .menuTarget {
     border:1px solid threedshadow;
     background-color:white;
     opacity:0.9;
-    font-family: Monaco, monospace;
+    font-family: monospace;
     font-size: 11px;
     padding-bottom: 5px;
     cursor: move;
