--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -12,7 +12,7 @@
     position: relative;
     margin: 0;
     padding: 1em 0 0 6px;
-    font-family: Monaco, monospace;
+    font-family: monospace;
     color: #000000;
 }
 
