--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -75,7 +75,7 @@ toolbar[iconsize="small"] #firebug-button > .toolbarbutton-icon {
 
 #fbCommandArrow {
     margin: 2px 0 2px 7px;
-    font-family: Monaco, monospace;
+    font-family: monospace;
     color: #0000FF;
 }
 
@@ -85,13 +85,13 @@ toolbar[iconsize="small"] #firebug-button > .toolbarbutton-icon {
     padding: 0 4px;
     height: 0;
     border: none;
-    font-family: Monaco, monospace;
+    font-family: monospace;
     direction: ltr;
 }
 
 #fbLargeCommandLine {
     margin: 0;
-    font-family: Monaco, monospace;
+    font-family: monospace;
     direction: ltr;
 }
 
@@ -462,7 +462,7 @@ menupopup[chromedir="rtl"] > .navigationHistoryMenuItemBack {
 }
 
 #fbMigrationOk {
-    font-family: Monaco, monospace;
+    font-family: monospace;
     font-size: 14px;
     color: #FF9933;
     font-weight: bold;
